[gd_scene load_steps=3 format=3 uid="uid://c8q2245rxwu31"]

[ext_resource type="Script" path="res://scenes/menus/pause/PauseMenu.gd" id="1_jokxq"]
[ext_resource type="Texture2D" uid="uid://cmnithvhkyspe" path="res://scenes/menus/ui_tilemap.png" id="1_podx6"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jokxq")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -87.0
offset_right = 115.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_podx6")
region_rect = Rect2(128, 162, 96, 28)
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="Margin" type="MarginContainer" parent="Panel/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Panel/NinePatchRect/Margin"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/NinePatchRect/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_podx6")
region_rect = Rect2(129, 128, 94, 32)
patch_margin_left = 31
patch_margin_top = 8
patch_margin_right = 31
patch_margin_bottom = 12

[node name="Label" type="Label" parent="Panel/NinePatchRect/Margin/VBox/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PAUSE_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="MarginContainer" parent="Panel/NinePatchRect/Margin/VBox"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="ResumeButton" type="Button" parent="Panel/NinePatchRect/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
text = "PAUSE_RESUME_BUTTON"

[node name="QuitButton" type="Button" parent="Panel/NinePatchRect/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../ResumeButton")
text = "PAUSE_QUIT_BUTTON"

[connection signal="pressed" from="Panel/NinePatchRect/Margin/VBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/Margin/VBox/QuitButton" to="." method="_on_quit_button_pressed"]
